# 3DPhysicsEngine

./: .gitignore  CMakeLists.txt
src/core/: AABB.cpp  AABB.h  AABBTree.h  Broadphase.h  Collider.h  Constraint.cpp  Constraint.h  ContactConstraint.cpp  ContactConstraint.h  EPA.h  GJK.h  Manifold.h  Matrix4.h  Mesh.h  MeshLibrary.h  MeshLoader.h  Node.cpp  Node.h  PhysicsWorld.h  Quaternion.h  RigidBody.h  Simplex.h  TeapotMesh.h  Vector3.h  main.cpp
src/core/shape/: Shape.cpp  Shape.h
src/rendering/: App.h  Camera.h  Renderer.h  Shader.h  Window.h  mainApp.cpp  tempCodeRunnerFile.cpp
src/rendering/resources/: default.frag  default.vert  donut_icing.mtl
src/utils/: MinowskiDifference.h
